@startuml D-ERD-001 — Diagrama Entidad-Relación de Zarix
title ZARIX — Diagrama Entidad-Relación (PostgreSQL + RLS)

skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam linetype ortho
skinparam backgroundColor white
skinparam handwritten false
' ══ Identidad visual Zarix — paleta esmeralda (DESIGN.md) sobre convención de cátedra ══
skinparam roundCorner 10
skinparam TitleFontColor #065F46
skinparam TitleFontSize 15
skinparam TitleFontStyle bold
skinparam ArrowColor #334155
skinparam ArrowFontColor #475569
skinparam ArrowThickness 1.2
skinparam actor {
  BackgroundColor #DCFCE7
  BorderColor #16A34A
  FontColor #064E3B
}
skinparam usecase {
  BackgroundColor #F0FDF4
  BorderColor #16A34A
  FontColor #052E16
}
skinparam rectangle {
  BackgroundColor #FFFFFF
  BorderColor #94A3B8
  FontColor #334155
}
skinparam boundary {
  BackgroundColor #DBEAFE
  BorderColor #2563EB
  FontColor #1E3A8A
}
skinparam control {
  BackgroundColor #FEF9C3
  BorderColor #CA8A04
  FontColor #713F12
}
skinparam entity {
  BackgroundColor #DCFCE7
  BorderColor #16A34A
  FontColor #064E3B
}
skinparam class {
  BackgroundColor #F0FDF4
  BorderColor #16A34A
  HeaderBackgroundColor #DCFCE7
  FontColor #052E16
  AttributeFontColor #334155
  StereotypeFontColor #16A34A
}
skinparam package {
  BackgroundColor #F8FAFC
  BorderColor #16A34A
  FontColor #064E3B
  FontStyle bold
}
skinparam node {
  BackgroundColor #F0FDF4
  BorderColor #16A34A
  FontColor #052E16
}
skinparam database {
  BackgroundColor #DCFCE7
  BorderColor #16A34A
  FontColor #064E3B
}
skinparam component {
  BackgroundColor #F0FDF4
  BorderColor #16A34A
  FontColor #052E16
}
skinparam cloud {
  BackgroundColor #EFF6FF
  BorderColor #3B82F6
  FontColor #1E3A8A
}
skinparam participant {
  BackgroundColor #DCFCE7
  BorderColor #16A34A
  FontColor #064E3B
}
skinparam sequence {
  LifeLineBorderColor #94A3B8
  LifeLineBackgroundColor #F0FDF4
  GroupBackgroundColor #DCFCE7
  GroupBorderColor #16A34A
  GroupFontColor #064E3B
}
skinparam note {
  BackgroundColor #FEFCE8
  BorderColor #EAB308
  FontColor #713F12
}
skinparam legend {
  BackgroundColor #F0FDF4
  BorderColor #16A34A
  FontColor #064E3B
}


entity "users" as users {
    *id : UUID <<PK>>
    --
    default_currency : TEXT
    status : subscription_status
    telegram_chat_id : BIGINT
}
entity "accounts" as accounts {
    *id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    name : TEXT
    type : account_type
    currency : TEXT
    balance : NUMERIC
}
entity "categories" as categories {
    *id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    parent_id : UUID <<FK>>
    name : TEXT
    type : category_type
}
entity "transactions" as transactions {
    *id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    account_id : UUID <<FK>>
    destination_account_id : UUID <<FK>>
    category_id : UUID <<FK>>
    recurring_rule_id : UUID <<logical>>
    amount : NUMERIC
    amount_in_account_currency : NUMERIC
}
entity "recurring_rules" as recurring {
    *id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    account_id : UUID <<FK>>
    category_id : UUID <<FK>>
    frequency : recurrence_frequency
}
entity "budgets" as budgets {
    *id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    category_id : UUID <<FK>>
    month : DATE
    amount : NUMERIC
}
entity "investments" as investments {
    *id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    account_id : UUID <<FK>>
    ticker : TEXT
    quantity : NUMERIC
}
entity "exchange_rates" as rates {
    *id : UUID <<PK>>
    --
    source : TEXT
    from_currency : TEXT
    to_currency : TEXT
    rate : NUMERIC
}

users ||--o{ accounts
users ||--o{ categories
users ||--o{ transactions
users ||--o{ recurring
users ||--o{ budgets
users ||--o{ investments
accounts ||--o{ transactions
accounts ||--o{ investments
accounts ||--o{ recurring
categories ||--o{ transactions
categories ||--o{ budgets
categories ||--o{ recurring
categories |o--o{ categories

note bottom of rates
  exchange_rates es global (sin user_id):
  histórico de cotizaciones compartido.
end note

note bottom of transactions
  recurring_rule_id es un vínculo lógico
  (sin constraint FK declarado en el schema).
end note

legend right
Proyecto: ZARIX — TIF UAI 2026
Autor: Jeffrey Dietz
Metodología: ICONIX
Fuente: supabase/schema.sql (código real)
8 tablas core. RLS activo: cada política filtra por
auth.uid() = user_id (aislamiento entre usuarios).
endlegend

@enduml
